RAIN-4756 : Citizen ENgagement ALignemnt issue fix

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/components/topbar.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/components/topbar.scss
@@ -95,9 +95,8 @@
 
 .cp {
   cursor: pointer;
-  display: flex;
-  align-items: end;
 }
+
 .citizen {
   .right {
     margin-top: 5px;
